# assemblyinfo

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
assemblyinfo/: __init__.py  interface.py
assemblyinfo/core/: __init__.py  acc.py  assembly.py  chrom.py  info.py
assemblyinfo/data/: db.parquet
docs/: api-build.rst  api-core-accession.rst  api-core-assembly.rst  api-core-chromosome.rst  api-core-info.rst  conf.py  index.rst  quickstart.md  retrieve_chromosome_data.ipynb
docs/tutorials/: get_quick_stats.ipynb  retrieve_chromosome_data.ipynb  translate_chromosome_names.ipynb
genomeinfo/: __init__.py  interface.py
genomeinfo/core/: __init__.py  acc.py  assembly.py  chrom.py  info.py
genomeinfo/data/: db.parquet  init_db.tsv
tests/: test_core_acc.py  test_core_assembly.py  test_core_chrom.py  test_core_info.py
